--- a/src/Pages/New/New.scss
+++ b/src/Pages/New/New.scss
@@ -69,6 +69,11 @@
               font-weight: bold;
               cursor: pointer;
               margin-top: 10px;
+
+              &:disabled{
+                background-color: rgba(5, 99, 99, 0.399);
+                cursor: not-allowed;
+              }
             }
           }
         }
